<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A2323"
    android:foregroundTint="#000000">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Add Task"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/editTextText"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="Task Title"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:contentDescription="Task Title"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="Task Description"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

    <EditText
        android:id="@+id/taskBody"
        android:layout_width="211dp"
        android:layout_height="44dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:contentDescription="Task Body"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Task State"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBody" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#AA3F1D"
        android:text="Add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addTaskBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#AA3F1D"
        android:text="Back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toEndOf="@+id/add" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Total Task:"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/teamSpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Team"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/addTaskAddImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="#AA3F1D"
        android:text="Add Image"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/taskImageImageView"
        android:layout_width="123dp"
        android:layout_height="97dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/addTaskDeleteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#AA3F1D"
        android:text="Delete Image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskAddImageButton" />


</androidx.constraintlayout.widget.ConstraintLayout>