...
            android:text="All Tasks"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#AA3F1D"
            android:text="Add Task"
...
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/task_icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="279dp"
            android:layout_height="111dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="136dp"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#FFFFFF"
...
