...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A2323"
    tools:context=".activities.TaskDetailsActivity">

    <Button
        android:id="@+id/taskDetailsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#AA3F1D"
...
